fixed some dates

--- a/sean_conner_resume.Rmd
+++ b/sean_conner_resume.Rmd
@@ -388,7 +388,7 @@ Bachelor of Arts in Political Science
 
 Oxford, MS
 
-Aug. 2015 - Aug. 2010
+Aug. 2014 - Aug. 2010
 
 GPA 3.34 / 4.00
 
@@ -426,9 +426,9 @@ Oxford, MS
 
 - Dean’s List (four semesters).
 - Representative for University of MS at the National Model United Nations in NYC (2010).
-- Pi Sigma Alpha, the Political Science Honors Society (2014-2015).
-- Provost Scholar (2010-2015).
-- President of the Senate for University of MS Model Senate (Fall 2013).
+- Pi Sigma Alpha, the Political Science Honors Society (2014).
+- Provost Scholar (2010-2014).
+- President for University of MS Model Senate (Fall 2013).
 
 
 
